--- a/TP_Unidad1_XimenaLisouski.ipynb
+++ b/TP_Unidad1_XimenaLisouski.ipynb
@@ -1184,7 +1184,7 @@
     }
    ],
    "source": [
-    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF']\n",
+    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF','Vitamin_D_nmog']\n",
     "display(Markdown(f\"## **Estadísticas de variables numéricas**\"))\n",
     "    \n",
     "for variable_num in variables_num:\n",
@@ -1627,7 +1627,7 @@
     }
    ],
    "source": [
-    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF']\n",
+    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF','Vitamin_D_nmog']\n",
     "\n",
     "display(Markdown(f\"### **Estadísticas según tratamiento**\"))\n",
     "    \n",
@@ -2483,7 +2483,7 @@
     }
    ],
    "source": [
-    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF']\n",
+    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF','Vitamin_D_nmog']\n",
     "\n",
     "for variable_num in variables_num:\n",
     "\n",
@@ -2650,7 +2650,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF']\n",
+    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF','Vitamin_D_nmog']\n",
     "resumen_t = pd.DataFrame(columns=['Variable','P_Valor','Estadistico','Decision','Interpretacion'])\n",
     "\n",
     "display(Markdown(f\"### Pruebas T para validar diferencias de medias según Diagnóstico\"))\n",
@@ -2784,7 +2784,7 @@
     }
    ],
    "source": [
-    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF']\n",
+    "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF','Vitamin_D_nmog']\n",
     "resumen_t = pd.DataFrame(columns=['Variable','P_Valor','Estadistico','Decision','Interpretacion'])\n",
     "\n",
     "display(Markdown(f\"### Pruebas T para validar diferencias de medias según Tratamiento\"))\n",
