--- a/TP_Unidad1_XimenaLisouski.ipynb
+++ b/TP_Unidad1_XimenaLisouski.ipynb
@@ -933,45 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def CalculaMetricas(variable):\n",
-    "\n",
-    "    media = variable.mean()\n",
-    "    mediana = variable.median()\n",
-    "    media_recortada = scipy.stats.trim_mean(variable,0.1)\n",
-    "    varianza = variable.var()\n",
-    "    desvio = variable.std()\n",
-    "    primer_cuartil = variable.quantile(0.25)\n",
-    "    tercer_cuartil = variable.quantile(0.75)\n",
-    "    percentil_1 = variable.quantile(0.01)\n",
-    "    percentil_99 = variable.quantile(0.99)\n",
-    "    error_estandar = scipy.stats.sem(variable) \n",
-    "    cv = scipy.stats.variation(variable)\n",
-    "    asimetria = scipy.stats.skew(variable) \n",
-    "    curtosis = scipy.stats.kurtosis(variable)    \n",
-    "    \n",
-    "    resultado = pd.DataFrame({        \n",
-    "        \n",
-    "        'Q1': [round(primer_cuartil, 0)], \n",
-    "        'Mediana': [round(mediana, 0)],\n",
-    "        'Media': [round(media, 2)],       \n",
-    "        'Q3': [round(tercer_cuartil, 0)],\n",
-    "        'DesvEst': [round(desvio, 2)],\n",
-    "        'Rango_Int': [round(tercer_cuartil - primer_cuartil, 0)],\n",
-    "        'CV': [round(cv, 2)],        \n",
-    "        'Coef_Asime': [round(asimetria, 2)],\n",
-    "        'Coef_Curtosis': [round(curtosis, 2)]\n",
-    "    })\n",
-    "\n",
-    "    return resultado"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1007,6 +969,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Variable</th>\n",
        "      <th>Q1</th>\n",
        "      <th>Mediana</th>\n",
        "      <th>Media</th>\n",
@@ -1021,6 +984,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>GMV</td>\n",
        "      <td>615068.0</td>\n",
        "      <td>654097.0</td>\n",
        "      <td>653841.73</td>\n",
@@ -1033,6 +997,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>WMV</td>\n",
        "      <td>519611.0</td>\n",
        "      <td>558128.0</td>\n",
        "      <td>562068.41</td>\n",
@@ -1045,6 +1010,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>WholeBrain</td>\n",
        "      <td>1145597.0</td>\n",
        "      <td>1210463.0</td>\n",
        "      <td>1215910.14</td>\n",
@@ -1057,6 +1023,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>GM_Peripheral</td>\n",
        "      <td>482651.0</td>\n",
        "      <td>512102.0</td>\n",
        "      <td>514544.21</td>\n",
@@ -1069,6 +1036,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>VentricularCSF</td>\n",
        "      <td>19763.0</td>\n",
        "      <td>24345.0</td>\n",
        "      <td>26026.38</td>\n",
@@ -1081,6 +1049,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>Vitamin_D_nmog</td>\n",
        "      <td>40.0</td>\n",
        "      <td>52.0</td>\n",
        "      <td>53.03</td>\n",
@@ -1096,24 +1065,24 @@
        "</div>"
       ],
       "text/plain": [
-       "          Q1    Mediana       Media         Q3    DesvEst  Rango_Int    CV  \\\n",
-       "0   615068.0   654097.0   653841.73   689568.0   58426.54    74501.0  0.09   \n",
-       "1   519611.0   558128.0   562068.41   599756.0   60775.75    80145.0  0.11   \n",
-       "2  1145597.0  1210463.0  1215910.14  1286400.0  110560.12   140803.0  0.09   \n",
-       "3   482651.0   512102.0   514544.21   545081.0   47432.35    62430.0  0.09   \n",
-       "4    19763.0    24345.0    26026.38    29788.0    9784.31    10025.0  0.37   \n",
-       "5       40.0       52.0       53.03       66.0      19.30       26.0  0.36   \n",
+       "         Variable         Q1    Mediana       Media         Q3    DesvEst  \\\n",
+       "0             GMV   615068.0   654097.0   653841.73   689568.0   58426.54   \n",
+       "1             WMV   519611.0   558128.0   562068.41   599756.0   60775.75   \n",
+       "2      WholeBrain  1145597.0  1210463.0  1215910.14  1286400.0  110560.12   \n",
+       "3   GM_Peripheral   482651.0   512102.0   514544.21   545081.0   47432.35   \n",
+       "4  VentricularCSF    19763.0    24345.0    26026.38    29788.0    9784.31   \n",
+       "5  Vitamin_D_nmog       40.0       52.0       53.03       66.0      19.30   \n",
        "\n",
-       "   Coef_Asime  Coef_Curtosis  \n",
-       "0        0.30           0.35  \n",
-       "1        0.47           0.67  \n",
-       "2        0.35           0.40  \n",
-       "3        0.26           0.36  \n",
-       "4        1.66           4.80  \n",
-       "5        0.39          -0.08  "
+       "   Rango_Int    CV  Coef_Asime  Coef_Curtosis  \n",
+       "0    74501.0  0.09        0.30           0.35  \n",
+       "1    80145.0  0.11        0.47           0.67  \n",
+       "2   140803.0  0.09        0.35           0.40  \n",
+       "3    62430.0  0.09        0.26           0.36  \n",
+       "4    10025.0  0.37        1.66           4.80  \n",
+       "5       26.0  0.36        0.39          -0.08  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,13 +1090,34 @@
    "source": [
     "variables_num = ['GMV', 'WMV', 'WholeBrain', 'GM_Peripheral', 'VentricularCSF','Vitamin_D_nmog']\n",
     "\n",
-    "resumen_t = pd.DataFrame(columns=['Q1','Mediana', 'Media',   'Q3', 'DesvEst','Rango_Int','CV','Coef_Asime','Coef_Curtosis'])\n",
+    "resumen_t = pd.DataFrame(columns=['Variable','Q1','Mediana', 'Media',   'Q3', 'DesvEst','Rango_Int','CV','Coef_Asime','Coef_Curtosis'])\n",
     "\n",
     "display(Markdown(f\"### Estadísticas Descriptivas de Variables Numéricas\"))\n",
     "\n",
-    "for variable_num in variables_num:\n",
+    "for variable in variables_num:\n",
     "    \n",
-    "    nueva_fila = CalculaMetricas(df[variable_num])\n",
+    "    media = df[variable].mean()\n",
+    "    mediana = df[variable].median()\n",
+    "    desvio = df[variable].std()\n",
+    "    primer_cuartil = df[variable].quantile(0.25)\n",
+    "    tercer_cuartil = df[variable].quantile(0.75)\n",
+    "    cv = scipy.stats.variation(df[variable])\n",
+    "    asimetria = scipy.stats.skew(df[variable]) \n",
+    "    curtosis = scipy.stats.kurtosis(df[variable])    \n",
+    "    \n",
+    "    nueva_fila = pd.DataFrame({        \n",
+    "        'Variable': [variable],\n",
+    "        'Q1': [round(primer_cuartil, 0)], \n",
+    "        'Mediana': [round(mediana, 0)],\n",
+    "        'Media': [round(media, 2)],       \n",
+    "        'Q3': [round(tercer_cuartil, 0)],\n",
+    "        'DesvEst': [round(desvio, 2)],\n",
+    "        'Rango_Int': [round(tercer_cuartil - primer_cuartil, 0)],\n",
+    "        'CV': [round(cv, 2)],        \n",
+    "        'Coef_Asime': [round(asimetria, 2)],\n",
+    "        'Coef_Curtosis': [round(curtosis, 2)]\n",
+    "    })\n",
+    "    \n",
     "    \n",
     "    resumen_t =  pd.concat([resumen_t, nueva_fila], axis=0, ignore_index=True)\n",
     "\n",
